--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
 							<div class='resultBody'>
 								<div class='resultDiv'>
 									<div>NAME</div>
-									<div>THU HAN MYO LWIN</div>
+									<div>SHWE YEE WIN</div>
 								</div>
 								<div class='resultDiv'>
 									<div>FATHER NAME</div>
-									<div>U HLA MYO LWIN</div>
+									<div>U KYAW SEIN WIN</div>
 								</div>
 								<div class='resultDiv'>
 									<div>GENDER</div>
-									<div>MALE</div>
+									<div>FEMALE</div>
 								</div>
 								<div class='resultDiv'>
 									<div>DOB(YYYY-MM-DD)</div>
@@ -137,7 +137,7 @@
 								</div>
 								<div class='resultDiv'>
 									<div>PASSPORT NO</div>
-									<div>ME445024</div>
+									<div></div>
 								</div>
 								<div class='resultDiv'>
 									<div>PRODUCT NAME <br> (1st)</div>
